ran RAILS_ENV=production bundle exec rake assets:precompile to fix images not showing up

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -17,9 +17,9 @@
 	display: inline-block;
 }
 
-/*.customisation-display {
+.customisation-display {
 	border: 1px solid black;
-}*/
+}
 
 .style-thumbnail {
 	padding: 1em;
